# Hanah-Tax-OCR

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  READEME.md  README.md  pyproject.toml
.github/: pull_request_template.md
configs/: augmentation.yaml
data/: README.md
evals/: README.md  benchmark_latency_observations.json  benchmark_protocol.json
scripts/: __init__.py  augment_dataset.py
tests/: test_augment_dataset.py  test_aws_textract_protocol_eval.py  test_azure_document_intelligence_protocol_eval.py  test_bootstrap_sample_dataset.py  test_bootstrap_uncovered_samples.py  test_data_gap_report.py  test_date_synthetic.py  test_document_checks.py  test_english_name_synthetic.py  test_error_taxonomy.py  test_eval_report_comparison.py  test_eval_report_summary.py  test_eval_suite_runner.py  test_evaluation.py  test_external_holdout.py  test_external_holdout_audit.py  test_field_crops.py  test_field_error_report.py  test_google_document_ai_protocol_eval.py  test_hard_case_augmentation.py  test_harness.py  test_ingest_manifest.py  test_normalization.py  test_ocr_engine.py  test_parsers.py  test_promote_review_queue.py  test_promote_to_staging.py  test_recognizer_prep.py  test_redact_labels.py  test_regression_suite.py  test_rejected_crop_report.py  test_replay_hybrid_eval.py  test_review_queue_priorities.py  test_reviewer.py  test_run_external_holdout_eval.py  test_run_semi_real_probe_eval.py  test_sample_coverage.py  test_sample_label_priorities.py  test_semi_real_probe_suite.py  test_sota_positioning_snapshot.py  (+3 more)
(+451 files in other folders)
